[package]
name = "rustls-tokio-stream"
version = "0.2.17"
edition = "2021"
description = "AsyncRead/AsyncWrite interface for RustTLS on Tokio"
license = "MIT"
readme = "README.md"
repository = "https://github.com/denoland/rustls-tokio-stream"

[features]
default = []
trace = []

[dependencies]
tokio = { version = "1", features = [ "io-util", "net", "rt", "sync" ] }
rustls = "0.21"
futures = "0.3"
socket2 = "0.5"

[dev_dependencies]
tokio = { version = "1", features = [ "full" ] }
rustls-pemfile = "1.0"
rustls = { version = "0.21", features = [ "dangerous_configuration" ] }
ntest = "0.9"
rstest = "0.18"
fastwebsockets = { version = "=0.5.0", features = [ "unstable-split" ] }

[[example]]
name = "ssl_trace"
