[package]
name = "rustls-tokio-stream"
version = "0.2.24"
edition = "2021"
description = "AsyncRead/AsyncWrite interface for RustTLS on Tokio"
license = "MIT"
readme = "README.md"
repository = "https://github.com/denoland/rustls-tokio-stream"

[features]
default = []
trace = []

[dependencies]
tokio = { version = "1", features = [ "io-util", "net", "rt", "sync" ] }
rustls = { version = "0.23", default-features = false, features = ["logging", "std", "tls12", "ring"] }
futures = "0.3"
socket2 = "0.5"

[dev_dependencies]
tokio = { version = "1", features = [ "full" ] }
rustls-pemfile = "2.0.0"
ntest = "0.9"
rstest = "0.18"
fastwebsockets = { version = "=0.6.0", features = [ "unstable-split" ] }

[[example]]
name = "ssl_trace"
