[package]
name = "rustls-tokio-stream"
version = "0.6.0"
edition = "2021"
description = "AsyncRead/AsyncWrite interface for RustTLS on Tokio"
license = "MIT"
readme = "README.md"
repository = "https://github.com/denoland/rustls-tokio-stream"

[features]
default = []
trace = []

[dependencies]
# io-util for stream splitting, net for TcpStream, rt for tasks, 
tokio = { version = "1", default-features = false, features = ["io-util", "net", "rt"] }
# std feature is required for error conversion
rustls = { version = "0.23", default-features = false, features = ["std"] }
# AtomicWaker and FutureExt
futures = "0.3"
# SockRef
socket2 = "0.5"

[dev-dependencies]
tokio = { version = "1", features = [ "full" ] }
rustls = { version = "0.23.25", default-features = false, features = ["logging", "std", "tls12", "ring"] }
rustls-pemfile = "2.0.0"
ntest = "0.9"
rstest = "0.18"
fastwebsockets = { version = "=0.6.0", features = [ "unstable-split" ] }

[[example]]
name = "ssl_trace"
